Closed
Bug 1321777
Opened 6 years ago
Closed 6 years ago
timezone definition conflict since bug 1303091
Categories
(Core :: JavaScript: Internationalization API, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: gaston, Assigned: gaston)
References
Details
Attachments
(1 file)
969 bytes,
patch
|
anba
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build failure on OpenBSD, which has struct timezone in sys/time.h 35:58.02 In file included from /home/obj/m-c/js/src/Unified_cpp_js_src0.cpp:20: 35:58.04 /home/othersrc/mozilla-central/js/src/builtin/Intl.cpp:2171:39: error: reference to 'timezone' is ambiguous 35:58.06 for (const auto& legacyTimeZone : timezone::legacyICUTimeZones) { 35:58.08 ^ 35:58.09 /usr/include/sys/time.h:72:8: note: candidate found by name lookup is 'timezone' 35:58.09 struct timezone { 35:58.09 ^ 35:58.12 /home/othersrc/mozilla-central/js/src/builtin/IntlTimeZoneData.h:8:11: note: candidate found by name lookup is 'js::timezone' 35:58.12 namespace timezone { prepending js:: namespace fixes the issue.
Assignee | ||
Comment 1•6 years ago
|
||
Assignee: nobody → landry
Attachment #8816420 -
Flags: review?(andrebargull)
Assignee | ||
Updated•6 years ago
|
status-firefox52:
--- → affected
status-firefox53:
--- → affected
OS: Unspecified → OpenBSD
Version: 50 Branch → Trunk
Comment 2•6 years ago
|
||
Comment on attachment 8816420 [details] [diff] [review] bug-1321777 Review of attachment 8816420 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for fixing!
Attachment #8816420 -
Flags: review?(andrebargull) → review+
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/c699b4675d34 Prepend js namespace to timezone to fix a build failure on OpenBSD. r=andrebargull
Keywords: checkin-needed
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c699b4675d34
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 8816420 [details] [diff] [review] bug-1321777 Approval Request Comment [Feature/Bug causing the regression]: 1303091 [User impact if declined]: FTBFS on OpenBSD, see http://buildbot.rhaalovely.net/builders/mozilla-aurora-amd64/builds/1880 [Is this code covered by automated tests?]: ? [Has the fix been verified in Nightly?]: Landed in https://hg.mozilla.org/mozilla-central/rev/c699b4675d34 [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: uses explicit namespace [String changes made/needed]: none
Attachment #8816420 -
Flags: approval-mozilla-aurora?
Comment 6•6 years ago
|
||
Comment on attachment 8816420 [details] [diff] [review] bug-1321777 openbsd build fix, take in aurora52
Attachment #8816420 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 7•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/48a4769a75a5
You need to log in
before you can comment on or make changes to this bug.
Description
•