Bug 1321777 - Prepend js namespace to timezone to fix a build failure on OpenBSD. r=andrebargull

--HG--
extra : rebase_source : f7ee67cc072272478fa8509779e14f1c1858a0ef